[package]
name        = "mono_axis"
version     = "0.1.0"
authors     = ["Jérôme Ramette <jerome@ramette.org>"]
description = "One-dimensional Cellular Automaton"
repository  = "https://github.com/be-next/MonoAxis"
edition     = "2021"
readme      = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde       = { version = "1.0.194", features = ["derive"] }
serde_json  = "1.0.109"
clap = { version = "4.4.12", features = ["derive"] }

[[bin]]
name = "mono_axis"
path = "bin/mono_axis.rs"
