[package]
name                 = "mono_axis"
description          = "One-dimensional Cellular Automaton"
version.workspace    = true
authors.workspace    = true
repository.workspace = true
edition.workspace    = true
readme.workspace     = true
license.workspace    = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde       = { version = "1.0.194", features = ["derive"] }
serde_json  = "1.0.111"
clap = { version = "4.4.13", features = ["derive"] }


[workspace]
members = [
    "cli",
]

[workspace.package]
version     = "0.1.0"
authors     = ["Jérôme Ramette <jerome@ramette.org>"]
repository  = "https://github.com/be-next/MonoAxis"
edition     = "2021"
readme      = "README.md"
license     = "Apache-2.0"

[[bin]]
name = "mono_axis_cli"
path = "cli/src/main.rs"
