[package]
name                 = "mono_axis"
description          = "One-dimensional Cellular Automaton"
version.workspace    = true
authors.workspace    = true
repository.workspace = true
edition.workspace    = true
readme.workspace     = true
license.workspace    = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde       = { version = "1.0.196", features = ["derive"] }
serde_json  = "1.0.112"
clap = { version = "4.4.18", features = ["derive"] }
iced = {version = "0.10.0", features = ["canvas", "image", "svg", "debug"]}
iced_style = "0.9.0"

[workspace]
members = [
    "cli",
    "gui",
]

[workspace.package]
version     = "0.1.0"
authors     = ["Jérôme Ramette <jerome@ramette.org>"]
repository  = "https://github.com/be-next/MonoAxis"
edition     = "2021"
readme      = "README.md"
license     = "Apache-2.0"

[[bin]]
name = "mono_axis_cli"
path = "cli/src/main.rs"

[[bin]]
name = "mono_axis_gui"
path = "gui/src/main.rs"
